kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quantummesh
  labels:
    name: quantummesh
